# TheDailyTelegram

./: .env.example  .gitignore  CLAUDE.md  README.md  config.yaml.example  pyproject.toml
src/tg_compiler/: analyzer.py  config.py  db.py  generator.py  main.py  scraper.py  synthesiser.py  trends.py  triage.py  utils.py
templates/: briefing.css  briefing.md.j2  briefing_mobile.css  intel_front_page.md.j2
tests/: conftest.py  test_analyzer.py  test_config.py  test_db.py  test_generator.py  test_main.py  test_scraper.py  test_synthesiser.py  test_threat_level.py  test_trends.py  test_triage.py
