[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "the-daily-telegram"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "telethon>=1.36",
    "openai>=1.30",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "markdown-pdf>=1.3",
    "aiofiles>=23.0",
    "python-dotenv>=1.0",
    "pypdf>=4.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["src"]
